# hf-embeddings

./: .gitignore  LICENSE.md  README.md  embeddings.py  environment-test.yaml  environment.yaml  requirements.txt  setup.cfg
.github/workflows/: test.yaml
src/: __init__.py  cli.py  embeddingsync.py  sd-embeddings-sync.py  sd_embeddings_sync.py
src/sd-embeddings-sync/: cli.py
src/sdembeddingssync/: __init__.py  cli.py  httpnano.py  sdsync.py
tests/: tests.py
