[metadata]
name = sd_embeddings_sync
version = 0.0.3
author = Deity Durg
author_email = loopyd@users.noreply.github.com
description = Fetch and sync stable-diffusion embeddings in the draconic way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/loopyd/hf-embeddings
project_urls =
    Bug Tracker = https://github.com/loopyd/hf-embeddings/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.2
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sd_embeddings_sync_cli = sd_embeddings_sync.cli:main

[flake8]
max-line-length = 160
extend-ignore = E203
